--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div class="hero-right">
           <div class="profile-card">
-            <img src="assets/Photo.png" alt="Shasmitha V - profile photo" class="profile-img" />
+            <img src="Photo.png" alt="Shasmitha V - profile photo" class="profile-img" />
             <div class="profile-meta">
               <h3>Shasmitha V</h3>
               <p>Artificial Intelligence & Data Science Student</p>
@@ -325,3 +325,4 @@
   </script>
 </body>
 </html>
+
